fixing usecase
